--- a/Content/outer.ipynb
+++ b/Content/outer.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $\\mathbf{x}$ and $\\mathbf{y}$ be two vectors given by:"
+    "### Real outer product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $\\mathbf{x}$ and $\\mathbf{y}$ be two real vectors given by:"
    ]
   },
   {
@@ -20,10 +27,10 @@
    "source": [
     "$$\\mathbf{x} = \\left[\n",
     "\\begin{array}{c}\n",
+    "x_{0} \\\\\n",
     "x_{1} \\\\\n",
-    "x_{2} \\\\\n",
     "\\vdots \\\\\n",
-    "x_{N}\n",
+    "x_{N-1}\n",
     "\\end{array}\n",
     "\\right]_{\\, N \\times 1}$$"
    ]
@@ -41,10 +48,10 @@
    "source": [
     "$$\\mathbf{y} = \\left[\n",
     "\\begin{array}{c}\n",
+    "y_{0} \\\\\n",
     "y_{1} \\\\\n",
-    "y_{2} \\\\\n",
     "\\vdots \\\\\n",
-    "y_{M}\n",
+    "y_{M-1}\n",
     "\\end{array}\n",
     "\\right]_{\\, M \\times 1} \\: .$$"
    ]
@@ -53,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [outer](https://en.wikipedia.org/wiki/Outer_product) product is defined as follows:"
+    "In this case, the [outer](https://en.wikipedia.org/wiki/Outer_product) product results in a matrix $\\mathbf{M}$ given by:"
    ]
   },
   {
@@ -65,13 +72,13 @@
     "\\mathbf{M} &= \\mathbf{x} \\otimes \\mathbf{y} \\\\\n",
     "           &= \\mathbf{x} \\cdot \\mathbf{y}^{\\top} \\\\\n",
     "           &= \\begin{bmatrix}\n",
+    "                x_{0} \\, \\mathbf{y}^{\\top} \\\\\n",
     "                x_{1} \\, \\mathbf{y}^{\\top} \\\\\n",
-    "                x_{2} \\, \\mathbf{y}^{\\top} \\\\\n",
     "                \\vdots \\\\\n",
-    "                x_{N} \\, \\mathbf{y}^{\\top}\n",
+    "                x_{N-1} \\, \\mathbf{y}^{\\top}\n",
     "              \\end{bmatrix}_{\\, N \\times M} \\\\\n",
     "           &= \\begin{bmatrix}\n",
-    "                y_{1} \\, \\mathbf{x} & \\dots & y_{N} \\, \\mathbf{x}\n",
+    "                y_{0} \\, \\mathbf{x} & \\dots & y_{M-1} \\, \\mathbf{x}\n",
     "              \\end{bmatrix}_{\\, N \\times M}\n",
     "\\end{split} \\: .\n",
     "$$"
@@ -81,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that, in this case, the result is a $N \\times M$ matrix, where $N$ is the number of elements of $\\mathbf{x}$ and $M$ is the number of elements of $\\mathbf{y}$."
+    "Notice that, in this case, the result is an $N \\times M$ matrix, where $N$ is the number of elements of $\\mathbf{x}$ and $M$ is the number of elements of $\\mathbf{y}$."
    ]
   },
   {
@@ -95,39 +102,182 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for i = 1:N\n",
-    "        for j = 1:M\n",
-    "            M[i,j] = x[i]*y[j]"
+    "    outer_real(x, y):\n",
+    "\n",
+    "        N = size(x)\n",
+    "        M = size(y)\n",
+    "\n",
+    "        M = zeros(N,M)\n",
+    "\n",
+    "        for i = 0:N-1\n",
+    "            for j = 0:M-1\n",
+    "                M[i,j] = x[i]*y[j]\n",
+    "\n",
+    "        return M"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "or, according to the *colon notation*, by a *row partition*"
+    "Alternatively, the pseudo-code presented above can be rewritten by using the *colon notation* as a *row partition*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for i = 1:N\n",
-    "        M[i,:] = x[i]*y[:]"
+    "    outer_real(x, y):\n",
+    "\n",
+    "        N = size(x)\n",
+    "        M = size(y)\n",
+    "\n",
+    "        M = zeros(N,M)\n",
+    "\n",
+    "        for i = 0:N-1\n",
+    "            M[i,:] = scalar_vec_real(x[i], y[:])\n",
+    "\n",
+    "        return M"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "or a *colounm partition*"
+    "or by as a *colounm partition*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for j = 1:M\n",
-    "        M[:,j] = x[:]*y[j]"
+    "    outer_real(x, y):\n",
+    "\n",
+    "        N = size(x)\n",
+    "        M = size(y)\n",
+    "\n",
+    "        M = zeros(N,M)\n",
+    "\n",
+    "        for j = 0:M-1\n",
+    "            M[:,j] = scalar_vec_real(y[j], x[:])\n",
+    "\n",
+    "        return M"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The pseudo-codes presented above use the `scalar_vec_real` function defined in the notebook [`scalar_vector`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/scalar_vector.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Complex outer product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $\\mathbf{x}$ and $\\mathbf{y}$ be two complex vectors given by:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{x} = \\mathbf{x}_{R} + imag \\, \\mathbf{x}_{I}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{y} = \\mathbf{y}_{R} + imag \\, \\mathbf{y}_{I} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case, the [outer](https://en.wikipedia.org/wiki/Outer_product) product results in a complex matrix $\\mathbf{M}$ given by:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{M} = \\mathbf{M}_{R} + imag \\, \\mathbf{M}_{I} \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{M}_{R} = \\mathbf{x}_{R} \\cdot \\mathbf{y}_{R}^{\\top} - \\mathbf{x}_{I} \\cdot \\mathbf{y}_{I}^{\\top}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{M}_{I} = \\mathbf{x}_{R} \\cdot \\mathbf{y}_{I}^{\\top} + \\mathbf{x}_{I} \\cdot \\mathbf{y}_{R}^{\\top} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The complex outer product can be represented by the following pseudo-code:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    outer_complex(x, y):\n",
+    "\n",
+    "        M_R  = outer_real(Re(x), Re(y))\n",
+    "        M_R -= outer_real(Im(x), Im(y))\n",
+    "        M_I  = outer_real(Re(x), Im(y))\n",
+    "        M_I += outer_real(Im(x), Re(y))\n",
+    "        M = M_R + imag*M_I\n",
+    "\n",
+    "        return M"
    ]
   },
   {
@@ -141,129 +291,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create three functions called `outer1`, `outer2` and `outer3` to implement the three algoritms shown above. All functions must receive two numpy arrays and return the outer product. The numpy arrays may have different sizes. The functions must be written in your `my_functions.py` file, according to the template shown in the notebook `dot.ipynb`.\n",
-    "2. Create four automatic tests in your `test_my_functions.py` file, according to the template shown in the notebook `dot.ipynb`. One test must compare the result obtained by all your functions and the result obtained by the function [`numpy.outer`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.outer.html) (see the example below). The other three tests must set a specific input and compare the expected result and the result obtained by each of your functions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "#### The routine [`numpy.outer`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.outer.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The code below uses the routines [`numpy.arange`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html) and [`numpy.linspace`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linspace.html)."
+    "Create the functions below according to `template.py`: \n",
+    "* `outer_real_dumb`\n",
+    "* `outer_real_numpy`\n",
+    "* `outer_real_numba` \n",
+    "* `outer_complex` \n",
+    "    \n",
+    "These functions must pass the following tests defined in `tests_template.py`:\n",
+    "* `test_outer_real_input_not_vector`\n",
+    "* `test_outer_real_compare_numpy_outer`\n",
+    "* `test_outer_real_known_values`\n",
+    "* `test_outer_real_transposition`\n",
+    "* `test_outer_real_distributivity`\n",
+    "* `test_outer_real_scalar_multiplication`\n",
+    "* `test_outer_complex_invalid_function`\n",
+    "* `test_outer_complex_compare_numpy_outer`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x = np.arange(5.)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.,  1.,  2.,  3.,  4.])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y = np.linspace(0.6, 1.2, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.6,  0.9,  1.2])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Calculate the outer product"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0. ,  0. ,  0. ],\n",
-       "       [ 0.6,  0.9,  1.2],\n",
-       "       [ 1.2,  1.8,  2.4],\n",
-       "       [ 1.8,  2.7,  3.6],\n",
-       "       [ 2.4,  3.6,  4.8]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.outer(x, y)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -283,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
