--- a/Content/scalar_vector.ipynb
+++ b/Content/scalar_vector.ipynb
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Take a look in the files `my_functions.py` and `test_my_functions.py`"
+    "Take a look in the files `template.py` and `test_template.py`"
    ]
   },
   {
