--- a/Content/vector-norms.ipynb
+++ b/Content/vector-norms.ipynb
@@ -27,10 +27,10 @@
    "source": [
     "$$\n",
     "\\mathbf{x} = \\begin{bmatrix}\n",
+    "x_{0} \\\\\n",
     "x_{1} \\\\\n",
-    "x_{2} \\\\\n",
     "\\vdots \\\\\n",
-    "x_{N}\n",
+    "x_{N-1}\n",
     "\\end{bmatrix}_{\\, N \\times 1} \\quad .\n",
     "$$"
    ]
@@ -60,7 +60,7 @@
     "\\begin{split}\n",
     "f_{p}(\\mathbf{x}) \n",
     "&= \\| \\mathbf{x} \\|_{p} \\\\\n",
-    "&= \\left( \\, \\mid x_{1} \\mid^{p} + \\cdots + \\mid x_{N} \\mid^{p} \\, \\right)^{\\frac{1}{p}}, \\quad p \\geq 1\n",
+    "&= \\left( \\, \\mid x_{0} \\mid^{p} + \\cdots + \\mid x_{N-1} \\mid^{p} \\, \\right)^{\\frac{1}{p}}, \\quad p \\geq 1\n",
     "\\end{split}\n",
     "$$"
    ]
@@ -81,7 +81,7 @@
     "$$\n",
     "\\begin{split}\n",
     "\\| \\mathbf{x} \\|_{2} \n",
-    "&= \\left( \\, \\mid x_{1} \\mid^{2} + \\cdots + \\mid x_{N} \\mid^{2} \\, \\right)^{\\frac{1}{2}}\n",
+    "&= \\left( \\, \\mid x_{0} \\mid^{1} + \\cdots + \\mid x_{N-1} \\mid^{2} \\, \\right)^{\\frac{1}{2}}\n",
     "&= \\sqrt{\\left( \\mathbf{x}^{\\top}\\mathbf{x} \\right)}\n",
     "\\end{split}\n",
     "$$"
@@ -94,7 +94,7 @@
     "#### 1-norm\n",
     "\n",
     "$$\n",
-    "\\| \\mathbf{x} \\|_{1} = \\mid x_{1} \\mid + \\cdots + \\mid x_{N} \\mid\n",
+    "\\| \\mathbf{x} \\|_{1} = \\mid x_{0} \\mid + \\cdots + \\mid x_{N-1} \\mid\n",
     "$$"
    ]
   },
@@ -183,6 +183,13 @@
     "    * $\\| \\mathbf{x} \\|_{\\infty} \\leq \\| \\mathbf{x} \\|_{2} \\leq \\sqrt{N} \\, \\| \\mathbf{x} \\|_{\\infty}$\n",
     "    * $\\| \\mathbf{x} \\|_{\\infty} \\leq \\| \\mathbf{x} \\|_{1} \\leq N \\, \\| \\mathbf{x} \\|_{\\infty}$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -201,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
