small changes in vector-norms, replace fcs by temp in test_template

--- a/Content/vector-norms.ipynb
+++ b/Content/vector-norms.ipynb
@@ -168,13 +168,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create a function called `vec_norm` that receives a numpy array 1D and an integer $p$ to define the norm. This function **must use your** `dot` **function** to compute the 2-norm. Use `p = 2` to define the 2-norm, `p = 1` to define the 1-norm and `p = 0` to define the $\\infty$-norm. Hints: (i) Use the chained conditionals `if`, `elif`, `else` (see the Software Carpentry lesson [Making Choices](http://swcarpentry.github.io/python-novice-inflammation/05-cond/index.html)). (ii) Use the function [numpy.abs](https://docs.scipy.org/doc/numpy/reference/generated/numpy.absolute.html) to compute the 1-norm. (iii) Use the function [numpy.max](https://docs.scipy.org/doc/numpy/reference/generated/numpy.ndarray.max.html) to compute the $\\infty$-norm."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "1. Create a function called `vec_norm` that receives a numpy array 1D and an integer $p$ to define the norm. This function **must use your** `dot` **function** to compute the 2-norm. Use `p = 2` to define the 2-norm, `p = 1` to define the 1-norm and `p = 0` to define the $\\infty$-norm. Hints: (i) Use the chained conditionals `if`, `elif`, `else` (see the Software Carpentry lesson [Making Choices](http://swcarpentry.github.io/python-novice-inflammation/05-cond/index.html)). (ii) Use the function [numpy.abs](https://docs.scipy.org/doc/numpy/reference/generated/numpy.absolute.html) to compute the 1-norm. (iii) Use the function [numpy.max](https://docs.scipy.org/doc/numpy/reference/generated/numpy.ndarray.max.html) to compute the $\\infty$-norm.\n",
+    "\n",
+    "\n",
     "2. Create one test to verify each one of the six inequalities given below:\n",
     "    * $f(\\mathbf{x} + \\mathbf{y}) \\leq f(\\mathbf{x}) + f(\\mathbf{y})$\n",
     "    * $f(\\alpha \\, \\mathbf{x}) \\leq \\: \\mid \\alpha \\mid \\, f(\\mathbf{x})$\n",
